test-cases/use_before_def.wybe
public proc use_before_def(?result:int)       
       ?result = result + 1
       
end
